Fix y-overflow in file tree

--- a/client/src/components/AnswerFileBrowser/index.less
+++ b/client/src/components/AnswerFileBrowser/index.less
@@ -64,3 +64,9 @@
     overflow: auto;
   }
 }
+
+.answer-editor-file-tree {
+  max-height: 100%;
+  background-color: #fafafa;
+  overflow: hidden;
+}
